--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node index.ts"
+    "start": "ts-node ./src/index.ts"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.1.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
+    "mongoose": "^7.2.2",
     "typescript": "^5.0.4",
     "uuid": "^9.0.0"
   },
