--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.2.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "typescript": "^5.0.4",
     "uuid": "^9.0.0"
   },
@@ -20,6 +22,8 @@
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/method-override": "^0.0.32",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
